--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,5 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 JDStore
-        <br>Design by vand
-
+    <p class="text-center">Copyright ©2017 JD-Store
+        <br>Design by <a href="http://qq.com">Vand</a>
     </p>
 </footer>
