--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -16,6 +16,10 @@
     <%= f.input :quantity %>
   </div>
 
+  <div class="group">
+    <%= f.input :image, as: :file %>
+  </div>
+
   <%= f.submit "submit", data:{disable_with: "submitting"} %>
 
   <% end %>
