--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -33,9 +33,16 @@
           <td>
             <%= cart_item.product.price %>
           </td>
+          <% cart_item = current_cart.cart_items.find_by(product_id: cart_item.product_id) %>
+
           <td>
-            <%= cart_item.product.quantity %>
+            <% cart_item = current_cart.cart_items.find_by_product_id(cart_item.product_id) %>
+            <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
+              <%= f.select :quantity, [1,2,3,4,5] %>
+              <%= f.submit "submit", data: { disable_with: "Submiting"} %>
+              <% end %>
           </td>
+
           <td>
             <%= link_to cart_item_path(cart_item.product_id), method: :delete do  %>
               <i class="fa fa-trash"></i>
