--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
     <div class="product-price"> $ <%= @product.price %> </div>
 
     <div class="pull-right">
-      <%= link_to("加入购物车", "#", class:"btn btn-lg btn-danger") %>
+      <%= link_to("加入购物车", add_to_cart_product_path(@product), class:"btn btn-lg btn-danger") %>
     </div>
   </div>
 </div>
