--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -35,7 +35,9 @@
             <%= cart_item.quantity %>
           </td>
           <td>
-
+            <%= link_to cart_item_path(cart_item), method: :delete do %>
+            <i class="fa fa-trash"></i>
+            <% end %>
           </td>
         </tr>
         <% end %>
