--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -16,7 +16,7 @@
         <% current_cart.cart_items.each do |cart_item| %>
         <tr>
           <td>
-            <%= link_to products_path(cart_item.product) do  %>
+            <%= link_to product_path(cart_item.product) do  %>
               <% if cart_item.product.image.present? %>
               <%= image_tag(cart_item.product.image.thumb.url, class:"thumbnail") %>
               <% else %>
@@ -26,16 +26,20 @@
             <% end %>
           </td>
           <td>
-            <%= link_to(cart_item.product.title, products_path(cart_item.product)) %>
+            <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
           </td>
           <td>
             <%= cart_item.product.price %>
           </td>
           <td>
-            <%= cart_item.quantity %>
+            <% cart_item = current_cart.cart_items.find_by(params[:id]) %>
+            <%= form_for cart_item, url: cart_item_path(cart_item) do |f| %>
+            <%= f.select :quantity, 1..cart_item.product.quantity %>
+            <%= f.submit "更新", data:{ disable_with:"submitting"} %>
+            <% end %>
           </td>
           <td>
-            <%= link_to cart_item_path(cart_item), method: :delete do %>
+            <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
             <i class="fa fa-trash"></i>
             <% end %>
           </td>
