--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -44,7 +44,7 @@
           </td>
 
           <td>
-            <%= link_to cart_item_path(cart_item.product_id), method: :delete do  %>
+            <%= link_to cart_item_path(cart_item), method: :delete do  %>
               <i class="fa fa-trash"></i>
             <% end %>
           </td>
