--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -10,7 +10,7 @@
         </tr>
       </thead>
       <tbody>
-        <% current_cart.cart_items.each do |cart_items| %>
+        <% current_cart.cart_items.each do |cart_item| %>
         <tr>
           <td>
             <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
