--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -39,7 +39,7 @@
           </tr>
           <tr>
             <td>
-              <%= @order.shipping_name %> - <%= @order.shing_address %>
+              <%= @order.shipping_name %> - <%= @order.shipping_address %>
             </td>
           </tr>
         </tbody>
