--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -44,5 +44,13 @@
           </tr>
         </tbody>
       </table>
+
+      <div class="group pull-right">
+        <%= link_to("支付宝支付", pay_with_alipay_order_path(@order.token), method: :post, class:"btn btn-lg btn-danger",
+        data:{ confirm:"请确认 支付#{@order.total}元"}) %>
+        <%= link_to("微信支付", pay_with_wechat_order_path(@order.token), method: :post, class:"btn btn-lg btn-danger",
+        data:{ confirm:"请确认 支付#{@order.total}元"}) %>
+
+      </div>
   </div>
 </div>
