--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -45,6 +45,13 @@
         </tbody>
       </table>
 
+      <div class="pull-left">
+        <% if @order.order_placed? || @order.paid? %>
+        <%= link_to("申请取消订单", apply_to_cancel_order_path(@order.token), method: :post, class:"btn btn-lg btn-info",
+        data:{ confirm:"请确认 取消#{@order.total}订单"}) %>
+        <% end %>
+      </div>
+
       <% if !@order.is_paid? %>
       <div class="group pull-right">
         <%= link_to("支付宝支付", pay_with_alipay_order_path(@order.token), method: :post, class:"btn btn-lg btn-danger",
